--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://1.bp.blogspot.com/-3mgFT9b_Rxs/WuGt3zO6-HI/AAAAAAABUKc/68CJuoSd9rI-CdixCDwQqT_MPEG-1fIEACLcBGAs/s1600/google%2Btasks.PNG"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Taskify - Task Manager</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MERN Task Manager</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
